@@ -1,11 +1,11 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/sock/sock-1.1.ebuild,v 1.13 2006/11/22 20:24:52 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/sock/sock-1.1.ebuild,v 1.14 2008/02/04 15:24:11 coldwind Exp $
 
 DESCRIPTION="A shell interface to network sockets"
 SRC_URI="ftp://atrey.karlin.mff.cuni.cz/pub/local/mj/net/${P}.tar.gz"
 HOMEPAGE="http://atrey.karlin.mff.cuni.cz/~mj/linux.shtml"
-KEYWORDS="x86 sparc ~amd64"
+KEYWORDS="amd64 sparc x86"
 IUSE=""
 LICENSE="GPL-2"
 SLOT="0"
