@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/sock
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/sock/ChangeLog,v 1.11 2007/05/14 19:45:45 bangert Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/sock/ChangeLog,v 1.12 2008/02/04 15:24:11 coldwind Exp $
+
+  04 Feb 2008; Santiago M. Mola <coldwind@gentoo.org> sock-1.1.ebuild:
+  amd64 stable, #206544
 
   14 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
   add <herd>no-herd</herd>
